--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 					<footer id="footer">
 						<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-youtube"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><span class="label">Youtube</span></a></li>
+					<li><a href="#" class="icon brands fa-youtube"><a href="https://youtu.be/lsAQobQtpSU"><span class="label">Youtube</span></a></li>
 						<ul class="copyright">
 							<li>&copy; Fabricación original - Fco. Bravo .</li>
 						</ul>
